--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,20 @@ server.port=8586
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#//sigdolagi계정 사용을 위한 dto 클래스
+#oracle 설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=sigdolagi
+spring.datasource.password=1234
+
+#mybatis 매퍼의 위치 설정(src/main/resources하위에 생성함)
+#mybatis.mapper 하위의 모든 폴더에 있는 xml파일을 매퍼로 사용하겠다는 선언
+mybatis.mapper-locations=classpath:mapper/**/**.xml
+
 
 
 
