--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '3.2.0'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '3.1.5'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
+
+
 
 group = 'com.edu'
 version = '0.0.1-SNAPSHOT'
@@ -12,10 +14,8 @@ java {
 	sourceCompatibility = '17'
 }
 
-
-// 해당 프로젝트의 facet를 5.0으로 설정한다.
 eclipse.wtp.facet {
-    // Dynamic Web Module의 버전을 5.0으로 고정시켜 준다.
+    // Change the version of the Dynamic Web Module facet
     facet name: 'jst.web', version: '5.0'
 }
 
@@ -30,24 +30,20 @@ repositories {
 }
 
 dependencies {
-	//Spring-JDBC를 위한 의존설정
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//lombok
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
 	compileOnly 'org.projectlombok:lombok'
-	//오라클 driver
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	annotationProcessor 'org.projectlombok:lombok'
-	//tomcat
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//JSP사용을 위한 의존 추가
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
 	implementation 'jakarta.servlet:jakarta.servlet-api'
-	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
-	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-
-
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    
 }
 
 tasks.named('test') {
