--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,16 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=false
 
 
+spring.servlet.multipart.enabled=true
+# default : !M (개별 파일 최대 용량)
+spring.servlet.multipart.max-file-size=2MB
+# default : 10M (전체파일의 최대 용량)
+spring.servlet.multipart.max-request-size=20MB
+
+
+
+
+
 
 
 
