--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	// implementation 'commons-io:commons-io:2.11.0'  // 현재 최신 버전인지 확인 필요
 	implementation 'commons-io:commons-io:2.6' // 현재 최신 버전으로 업데이트하세요
-	implementation 'commons-io:commons-io:2.11.0' // 현재 최신 버전인지 확인 필요
+	//implementation 'commons-io:commons-io:2.11.0' // 현재 최신 버전인지 확인 필요
 	// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
 	
     /* 이 프로젝트의 libs폴더에 있는 모든 jar 파일을 라이브러리로
